# bbox_position

./: CMakeLists.txt  README.md  package.xml
launch/: display_result.launch  publish_bbox.launch
msg/: ImageBoundingBox.msg  ImageBoundingBoxListStamped.msg
src/: main.cpp  main.cpp~
